Update Interior project

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -62,7 +62,7 @@
                     <div class='description'>
                         <p class='title'>Adapter</p>
                         <p class='content'>
-                            An urban project for the downtown of Bratislava. A combination of permament and temporary interventions in the urban fabric raises the standard of living in the neighbourhood and at the same time prevents it from the negative influance of gentrification.
+                            An interior design for an apartment in Bratislava dedicated for a young, active couple. It has an open plan with a core storage box separting bedroom space from other zones.
                         </p>
                     </div>
                 </div>
