--- a/content/en/projects/interior.html
+++ b/content/en/projects/interior.html
@@ -7,6 +7,12 @@ title: Idea Box
     <p class='year'>
         <span class='headline'>Year:</span> 2015
     </p>
+    <p class='additional-info'>
+        Location: Bratislava
+    </p>
+    <p class='additional-info'>
+        Total surface area: 78m2
+    </p>
     <p class='type'>Conceptual project</p>
     <p class='source'>Course: Interior Design; STU Bratislava</p>
     <p>
