--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -51,7 +51,7 @@
                     <div class='description'>
                         <p class='title'>Idea Box</p>
                         <p class='content'>
-                            An interior design for an apartment in Bratislava dedicated for a young, active couple. It has an open plan with a core storage box separting bedroom space from other zones.
+                            Projekt aranżacji wnętrza mieszkania w Bratysławie przeznaczonego dla młodej, aktywnej pary. Charakteryzuje się otwartym planem z centralnym prostopadłościennym meblem oddzielającym część sypialną od pozostałych stref domu.
                         </p>
                     </div>
                 </div>
