--- a/content/pl/projects/interior.html
+++ b/content/pl/projects/interior.html
@@ -5,12 +5,18 @@ title: Idea Box
 <div class="row after-gap">
     <h2>Idea Box</h2>
     <p class='year'>
-        <span class='headline'>Year:</span> 2015
+        <span class='headline'>Rok:</span> 2015
     </p>
-    <p class='type'>Conceptual project</p>
-    <p class='source'>Course: Interior Design; STU Bratislava</p>
+    <p class='additional-info'>
+        Lokalizacja: Bratysława
+    </p>
+    <p class='additional-info'>
+        Powierzchnia całkowita: 78m2
+    </p>
+    <p class='type'>Projekt koncepcyjny</p>
+    <p class='source'>Kurs: Interior Design; STU Bratislava</p>
     <p>
-        An interior design for an apartment in Bratislava dedicated for a young, active couple. It has an open plan with a core storage box separting bedroom space from other zones.
+        Projekt aranżacji wnętrza mieszkania w Bratysławie przeznaczonego dla młodej, aktywnej pary. Charakteryzuje się otwartym planem z centralnym prostopadłościennym meblem oddzielającym część sypialną od pozostałych stref domu.
     </p>
 </div>
 <div class="row after-gap">
