Updated information about Pawilon project

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -27,7 +27,7 @@
                 <div class="project-stripe">
                     <img src="<%= stripe_path('jez') %>" />
                     <div class='description'>
-                        <p class='title'>WUT Pavilion</p>
+                        <p class='title'>WrUT Pavilion</p>
                         <p class='content'>
                             An exhibition pavilion built for the 70th anniversary of Wrocław University of Technology. Wooden structure filled with cardboard tubes creates a unique space to present the historical timeline of the university.
                         </p>
