--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -27,9 +27,9 @@
                 <div class="project-stripe">
                     <img src="<%= stripe_path('jez') %>" />
                     <div class='description'>
-                        <p class='title'>WUT Pavilion</p>
+                        <p class='title'>Pawilon PWr</p>
                         <p class='content'>
-                            An exhibition pavilion built for the 70th anniversary of Wrocław University of Technology. Wooden structure filled with cardboard tubes creates a unique space to present the historical timeline of the university.
+                            Pawilon ekspozycyjny zrealizowany z okazji 70-lecia Politechniki Wrocławskiej. Konstrukcja z drewnianych łuków wypełniona tulejami tekturowymi tworzy wyjątkową przestrzeń do prezentacji historii uczelni.
                         </p>
                     </div>
                 </div>
