--- a/content/pl/projects/pawilon.html
+++ b/content/pl/projects/pawilon.html
@@ -1,19 +1,19 @@
 ---
-title: WUT Pavilion
+title: Pawilon PWr
 ---
 
 <div class="row after-gap">
-    <h2>WUT Pavilion</h2>
+    <h2>Pawilon PWr</h2>
     <p class='cooperation'>
-        <span class='headline'>Cooperation:</span> Humanizacja Środowiska Miejskiego, EtaKsi, MOS, LabDigiFab
+        <span class='headline'>Współpraca:</span> KN Humanizacja Środowiska Miejskiego, EtaKsi, MOS, LabDigiFab
     </p>
     <p class='year'>
-        <span class='headline'>Year:</span> 2015
+        <span class='headline'>Rok:</span> 2015
     </p>
-    <p class='type'>Participation.</p>
-    <p class='link'><a href="http://archi-tektura.eu/">Archi-tektura.eu - detailed information (in Polish)</a></p>
+    <p class='type'>Instalacja.</p>
+    <p class='link'><a href="http://archi-tektura.eu/">Archi-tektura.eu - szczegółowe informacje</a></p>
     <p>
-        An exhibition pavilion built for the 70th anniversary of Wrocław University of Technology. Wooden structure filled with cardboard tubes creates a unique space to present the historical timeline of the university.
+        Pawilon ekspozycyjny zrealizowany z okazji 70-lecia Politechniki Wrocławskiej. Konstrukcja z drewnianych łuków wypełniona tulejami tekturowymi tworzy wyjątkową przestrzeń do prezentacji historii uczelni.
     </p>
 </div>
 <div class="row after-gap">
