--- a/content/en/projects/pawilon.html
+++ b/content/en/projects/pawilon.html
@@ -1,16 +1,16 @@
 ---
-title: WUT Pavilion
+title: WrUT Pavilion
 ---
 
 <div class="row after-gap">
-    <h2>WUT Pavilion</h2>
+    <h2>WrUT Pavilion</h2>
     <p class='cooperation'>
         <span class='headline'>Cooperation:</span> Humanizacja Środowiska Miejskiego, EtaKsi, MOS, LabDigiFab
     </p>
     <p class='year'>
         <span class='headline'>Year:</span> 2015
     </p>
-    <p class='type'>Participation.</p>
+    <p class='type'>Installation.</p>
     <p class='link'><a href="http://archi-tektura.eu/">Archi-tektura.eu - detailed information (in Polish)</a></p>
     <p>
         An exhibition pavilion built for the 70th anniversary of Wrocław University of Technology. Wooden structure filled with cardboard tubes creates a unique space to present the historical timeline of the university.
