Add Grid project

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -122,6 +122,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/grid">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('grid') %>" />
+                    <div class='description'>
+                        <p class='title'>The Grid</p>
+                        <p class='content'>
+                            Prototype of a living unit – shelter for homeless people. It consist of a set of woden elements and can be assembled fast and easily without any additional tools. The grid can be filled with any insulation material available. The whole structure is covered with a waterproof, semitransparent foil.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
