--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -122,6 +122,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/grid">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('grid') %>" />
+                    <div class='description'>
+                        <p class='title'>The Grid</p>
+                        <p class='content'>
+                            Prototyp schronienia dla osób pozbawionych dachu nad głową. Składa się z zestawu specjalnie opracowanych drewnianych części łączonych ze sobą bez użycia żadnych dodatkowych elementów i narzędzi. Powstałą siatkę półek można wypełnić dowolnymi łatwo dostępnymi materiałami dla uzyskania większej izolacyjności termicznej. Całość przykryta została wodoodporną półprzezroczystą folią.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
