Add project Zizzz

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -133,6 +133,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/zizzz">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('zizzz') %>" />
+                    <div class='description'>
+                        <p class='title'>Zizzz</p>
+                        <p class='content'>
+                            We present you Zizzz - hotel on demand. Click a button on  your  phone  and  the  nearest  driverless  mobile  bed  will  find  you.  It is small (what else would you need?), cheap (because you pay only for time spent in it), really quick (the firstnearest room would appear as soon as possible) and easy to order (via comfortable phone app).
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
