--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -133,6 +133,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/zizzz">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('zizzz') %>" />
+                    <div class='description'>
+                        <p class='title'>Zizzz</p>
+                        <p class='content'>
+                            Od teraz nie musisz wracać do hotelu – hotelem jest całe miasto! Przedstawiamy Zizzz – hotel na życzenie. Wystarczy kliknąć jeden przycisk i najbliższa mobilna sypialnia znajdzie Cię sama. Proste, tanie i szybkie alternatywne rozwiązanie noclegowe z dostawą do Ciebie. 
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
