Add project Biblioteka to homepage

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -144,6 +144,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/biblioteka">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('biblioteka') %>" />
+                    <div class='description'>
+                        <p class='title'>Public Library Nowe Żerniki</p>
+                        <p class='content'>
+                            The main concept of the library was to place the collection of books in the center, creating a heart of the building. It is surrounded  by ramps with diverse spaces for readers. Flexible plan allows to arrange various cultural activities.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
