--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -144,6 +144,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/biblioteka">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('biblioteka') %>" />
+                    <div class='description'>
+                        <p class='title'>Biblioteka Publiczna Nowe Żerniki</p>
+                        <p class='content'>
+                            Projekt biblioteki oparty na idei centralnie umiejscowionego księgozbioru - „serca” obiektu – oraz okrążających go czytelni umiejscowionych na pochylniach. W odpowiedzi na zmieniającą się rolę bibliotek we współczesnej kulturze głównym celem projektu było stworzenie różnorodnych przestrzeni odpowiadających zmieniającym się aktywnościom czytelników.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
