--- a/content/pl/projects/biblioteka.html
+++ b/content/pl/projects/biblioteka.html
@@ -1,24 +1,24 @@
 ---
-title: Public Library Nowe Żerniki
+title: Biblioteka Publiczna Nowe Żerniki
 ---
 
 <div class="row after-gap">
-    <h2>Public Library Nowe Żerniki</h2>
+    <h2>Biblioteka Publiczna Nowe Żerniki</h2>
     <p class='year'>
-        <span class='headline'>Year:</span> 2015
+        <span class='headline'>Rok:</span> 2015
     </p>
-    <p class='type'>Conceptual project</p>
+    <p class='type'>Projekt koncepcyjny</p>
     <p class='additional-info'>
-        Location: Nowe Żerniki, Wrocław
-    </p>
-    <p class='additional-info'>
-        Total surface area: 8000 m2
+        Lokalizacja: Nowe Żerniki, Wrocław
     </p>
     <p class='additional-info'>
-        Course: Pubic Buildings, WrUT
+        Powierzchnia całkowita: 8000m2
+    </p>
+    <p class='additional-info'>
+        Kurs: Projektowanie obiektów usługowo-społecznych w zabudowie śródmiejskiej, PWr
     </p>
     <p>
-        The main concept of the library was to place the collection of books in the center, creating a heart of the building. It is surrounded  by ramps with diverse spaces for readers. Flexible plan allows to arrange various cultural activities.
+        Projekt biblioteki oparty na idei centralnie umiejscowionego księgozbioru - „serca” obiektu – oraz okrążających go czytelni umiejscowionych na pochylniach. W odpowiedzi na zmieniającą się rolę bibliotek we współczesnej kulturze głównym celem projektu było stworzenie różnorodnych przestrzeni odpowiadających zmieniającym się aktywnościom czytelników.
     </p>
 </div>
 
@@ -61,4 +61,5 @@ title: Public Library Nowe Żerniki
 <div class="row after-gap">
     <img class='photo' src='/images/biblioteka/13.png' />
 </div>
+
 
