Add doublecrossed project

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -155,6 +155,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/doublecrossed">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('doublecrossed') %>" />
+                    <div class='description'>
+                        <p class='title'>Double-crossed</p>
+                        <p class='content'>
+                            This concept recall the oppressive urban form of Voisin Plan and criticize it by confronting it with existing city and its inhabitants. A new definition of a memorial monument is a farewell - a temporary structure in urban scale. Eighteen black crosses taken directly from Le Corbusier's plan will be floating above the Parisians' heads throwing a shadow on the existing urban fabric. 
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
