--- a/content/en/projects/doublecrossed.html
+++ b/content/en/projects/doublecrossed.html
@@ -1,19 +1,24 @@
 ---
-title: Double Crossed
+title: Double-crossed
 ---
 
 <div class="row after-gap">
-    <h2>Double Crossed</h2>
+    <h2>Double-crossed</h2>
     <p class='cooperation'>
-        <span class='headline'>Cooperation:</span> Humanizacja Środowiska Miejskiego, EtaKsi, MOS, LabDigiFab
+        <span class='headline'>Cooperation:</span> Kamila Waszkowiak
     </p>
     <p class='year'>
         <span class='headline'>Year:</span> 2015
     </p>
-    <p class='type'>Participation.</p>
-    <p class='link'><a href="http://archi-tektura.eu/">Archi-tektura.eu - detailed information (in Polish)</a></p>
+    <p class='type'>Conceptual project</p>
+    <p class='additional-info'>
+        Location: Paris, France
+    </p>
+    <p class='additional-info'>
+        Competition: Modernism Memorial – A Funerery Monument For The Death of Modernism
+    </p>
     <p>
-        An exhibition pavilion built for the 70th anniversary of Wrocław University of Technology. Wooden structure filled with cardboard tubes creates a unique space to present the historical timeline of the university.
+        This concept recall the oppressive urban form of Voisin Plan and criticize it by confronting it with existing city and its inhabitants. A new definition of a memorial monument is a farewell - a temporary structure in urban scale. Eighteen black crosses taken directly from Le Corbusier's plan will be floating above the Parisians' heads throwing a shadow on the existing urban fabric. 
     </p>
 </div>
 <div class="row after-gap">
