--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -155,6 +155,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/doublecrossed">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('doublecrossed') %>" />
+                    <div class='description'>
+                        <p class='title'>Double-crossed</p>
+                        <p class='content'>
+                            Koncepcja przywołuje przytłaczający swoją skalą Plan Voisin i konfrontuje go z istniejącą tkanką urbanistyczną. Osiemnaście czarnych krzyży przeniesionych bezpośrednio z planów Le Corbusiera unosi się nad głowami paryżan rzucając cień na istniejące miasto. Zamiast trwałego pomnika pamięci – tymczasowa instalacja pełniąca rolę pożegnania. 
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
