Updated WWU project

--- a/content/en/projects/wwu.html
+++ b/content/en/projects/wwu.html
@@ -1,5 +1,5 @@
 ---
-title: Lights ans shadows
+title: Lights and shadows
 ---
 
 <div class="row after-gap">
@@ -8,7 +8,10 @@ title: Lights ans shadows
         <span class='headline'>Year:</span> 2015
     </p>
     <p class='type'>Installation</p>
-    <p class='source'>Warszawskie Warsztaty Urbanistyczne 2</p>
+    <p class='additional-info'>
+        Location: Mokotów, Warsaw
+    </p>
+    <p class='source'>Warsaw Urban Workshops</p>
     <p>
         An installation for the children's daycare centre in Warsaw. The intervention of „lighting up” the fence and elevations with small trembling mirrors makes the place more attractive both for children and adults.
     </p>
