--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -5,9 +5,9 @@
                 <div class="project-stripe">
                     <img src="<%= stripe_path('wwu2') %>" />
                     <div class='description'>
-                        <p class='title'>Lights and shadows</p>
+                        <p class='title'>Blaski i cienie</p>
                         <p class='content'>
-                            An installation for the children's daycare centre in Warsaw. The intervention of „lighting up” the fence and elevations with small trembling mirrors makes the place more attractive both for children and adults.
+                            Instalacja zrealizowana na terenie Ogniska Wychowawczego Mokotów. Interwencja polegała na „rozświetleniu” ogrodzenia budynku małymi, drgającymi lusterkami. Miało to na celu zwiększenie atrakcyjności miejsca wśród dzieci oraz zwrócenie uwagi okolicznych mieszkańców na potrzeby instytucji.
                         </p>
                     </div>
                 </div>
