--- a/content/pl/projects/wwu.html
+++ b/content/pl/projects/wwu.html
@@ -1,16 +1,19 @@
 ---
-title: Lights ans shadows
+title: Blaski i cienie
 ---
 
 <div class="row after-gap">
-    <h2>Lights and shadows</h2>
+    <h2>Blaski i cienie</h2>
     <p class='year'>
-        <span class='headline'>Year:</span> 2015
+        <span class='headline'>Rok:</span> 2015
     </p>
-    <p class='type'>Installation</p>
+    <p class='type'>Instalacja</p>
+    <p class='additional-info'>
+        Lokalizacja: Mokotów, Warszawa
+    </p>
     <p class='source'>Warszawskie Warsztaty Urbanistyczne 2</p>
     <p>
-        An installation for the children's daycare centre in Warsaw. The intervention of „lighting up” the fence and elevations with small trembling mirrors makes the place more attractive both for children and adults.
+        Instalacja zrealizowana na terenie Ogniska Wychowawczego Mokotów. Interwencja polegała na „rozświetleniu” ogrodzenia budynku małymi, drgającymi lusterkami. Miało to na celu zwiększenie atrakcyjności miejsca wśród dzieci oraz zwrócenie uwagi okolicznych mieszkańców na potrzeby instytucji.
     </p>
 </div>
 <div class="row after-gap">
@@ -36,3 +39,4 @@ title: Lights ans shadows
 <div class="row after-gap">
     <img class='photo' src='/images/wwu2/5.jpg' />
 </div>
+
