Updated project Fabryka

--- a/content/en/projects/fabryka.html
+++ b/content/en/projects/fabryka.html
@@ -8,7 +8,13 @@ title: Science and Technology Park in Opole
         <span class='headline'>Year:</span> 2015
     </p>
     <p class='type'>Conceptual project</p>
-    <p class='source'>Course: Projektowanie uniwersalnych zakładów przemysłowych; PWr</p>
+    <p class='source'>Course: Universal Industrial Buildings Design, WrUT</p>
+    <p class='additional-info'>
+        Location: Opole
+    </p>
+    <p class='additional-info'>
+        Total surface area: 10560m2
+    </p>
     <p>
         An urban and architectural concept of a research centre for new branches of industry. It consist of laboratories, office buildings and production halls connected with a common passage.
     </p>
