--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -16,9 +16,9 @@
                 <div class="project-stripe">
                     <img src="<%= stripe_path('fabryka') %>" />
                     <div class='description'>
-                        <p class='title'>Science and Technology Park in Opole</p>
+                        <p class='title'>Park Naukowo-Technologiczny w Opolu</p>
                         <p class='content'>
-                            An urban and architectural concept of a research centre for new branches of industry. It consist of laboratories, office buildings and production halls connected with a common passage.
+                            Koncepcja zespołu obiektów naukowo-badawczych dla nowych gałęzi przemysłu. Składa się on z równolegle ustawionych budynków laboratoryjnych, biurowych i produkcyjnych połączonych wspólnym pasażem na poziomie drugiej kondygnacji. Układ ten umożliwia ewentualną dalszą rozbudowę Parku i łatwą obsługę obiektu.
                         </p>
                     </div>
                 </div>
