--- a/content/pl/projects/fabryka.html
+++ b/content/pl/projects/fabryka.html
@@ -1,16 +1,22 @@
 ---
-title: Science and Technology Park in Opole
+title: Park Naukowo-Technologiczny w Opolu
 ---
 
 <div class="row after-gap">
-    <h2>Science and Technology Park in Opole</h2>
+    <h2>Park Naukowo-Technologiczny w Opolu</h2>
     <p class='year'>
-        <span class='headline'>Year:</span> 2015
+        <span class='headline'>Rok:</span> 2015
     </p>
-    <p class='type'>Conceptual project</p>
-    <p class='source'>Course: Projektowanie uniwersalnych zakładów przemysłowych; PWr</p>
+    <p class='type'>Projekt koncepcyjny</p>
+    <p class='source'>Kurs: Projektowanie uniwersalnych zakładów przemysłowych, PWr</p>
+    <p class='additional-info'>
+        Lokalizacja: Opole
+    </p>
+    <p class='additional-info'>
+        Powierzchnia całkowita: 10560m2
+    </p>
     <p>
-        An urban and architectural concept of a research centre for new branches of industry. It consist of laboratories, office buildings and production halls connected with a common passage.
+        Koncepcja zespołu obiektów naukowo-badawczych dla nowych gałęzi przemysłu. Składa się on z równolegle ustawionych budynków laboratoryjnych, biurowych i produkcyjnych połączonych wspólnym pasażem na poziomie drugiej kondygnacji. Układ ten umożliwia ewentualną dalszą rozbudowę Parku i łatwą obsługę obiektu.
     </p>
 </div>
 <div class="row after-gap">
@@ -45,3 +51,4 @@ title: Science and Technology Park in Opole
 <div class="row after-gap">
     <img class='photo' src='/images/fabryka/10.jpg' />
 </div>
+
