Updated project Gecko

--- a/content/en/projects/gecko.html
+++ b/content/en/projects/gecko.html
@@ -11,6 +11,9 @@ title: The Gecko
         <span class='headline'>Year:</span> 2015
     </p>
     <p class='type'>Conceptual project + prototype</p>
+    <p class='additional-info'>
+        Location: Rotterdam, The Netherlands
+    </p>
     <p class='source'>International Design Seminar Workshop 2015 re:craft</p>
     <p>
         A prototype of a digital fabricated facade system. It is based on a principle of connecting form and contraform by using scanning and 3d printing. Revarded with the main prize of the international workshops InDeSem 2015 re.craft in Delft.
