--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -40,7 +40,7 @@
                     <div class='description'>
                         <p class='title'>The Gecko</p>
                         <p class='content'>
-                            A prototype of a digital fabricated facade system. It is based on a principle of connecting form and contraform by using scanning and 3d printing.   Revarded with the main prize of the international workshops InDeSem 2015 re.craft in Delft.
+                            Prototyp samonośnego systemu fasadowego wykorzystującego metody fabrykacji cyfrowej zainspirowany budową ciała gekona. Bazuje na zasadzie łączenia powierzchni typu pozytyw-negatyw dzięki zastosowaniu skanowania i druku 3d. 
                         </p>
                     </div>
                 </div>
