--- a/content/pl/projects/gecko.html
+++ b/content/pl/projects/gecko.html
@@ -5,15 +5,20 @@ title: The Gecko
 <div class="row after-gap">
     <h2>The Gecko</h2>
     <p class='cooperation'>
-        <span class='headline'>Cooperation:</span> Ilse Van Den Berg, Marcel Klaver, Stefanos Koufopoulos
+        <span class='headline'>Współpraca:</span> Ilse Van Den Berg, Marcel Klaver, Stefanos Koufopoulos
     </p>
     <p class='year'>
-        <span class='headline'>Year:</span> 2015
+        <span class='headline'>Rok:</span> 2015
     </p>
-    <p class='type'>Conceptual project + prototype</p>
-    <p class='source'>International Design Seminar Workshop 2015 re:craft</p>
+    <p class='type'>Projekt koncepcyjny + prototyp</p>
+    <p class='additional-info'>
+        Lokalizacja: Rotterdam, Holandia
+    </p>
+    <p class='source'>
+        Warsztaty: International Design Seminar Workshop 2015 re:craft, TU Delft– main prize
+    </p>
     <p>
-        A prototype of a digital fabricated facade system. It is based on a principle of connecting form and contraform by using scanning and 3d printing. Revarded with the main prize of the international workshops InDeSem 2015 re.craft in Delft.
+        Prototyp samonośnego systemu fasadowego wykorzystującego metody fabrykacji cyfrowej zainspirowany budową ciała gekona. Bazuje na zasadzie łączenia powierzchni typu pozytyw-negatyw dzięki zastosowaniu skanowania i druku 3d. 
     </p>
 </div>
 <div class="row after-gap">
@@ -37,3 +42,4 @@ title: The Gecko
 <div class="row after-gap">
     <img class='photo' src='/images/gecko/7.jpg' />
 </div>
+
